2010-08-15  Evan Briones  <erbriones@gmail.com>

	* MonoDevelop.ClassDesigner.csproj: 

2010-07-13  Evan Briones  <erbriones@gmail.com>

	* MonoDevelop.ClassDesigner.addin.xml: New extension point added for FigureCommandHandler,
	and for menu. New extensions added for menu and figure commands.
	
	* ClassDesignerView.cs: Deleted, now using AbstractDesigner in MonoDevelop.Diagram
	
	* ClassDesigner.cs: Extends new addin MonoDevelop.Diagram
	Added menu support. Toolbox support added. Now supports creating figures from the toolbar.
	
	* ClassDiagram.cs: Fixed MemberFormat and Grouping properties so that it checks
	for the correct figure type.
	
	* MonoDevelop.ClassDesigner.Commands: Added new folder for new commands.
	
2010-07-02  Evan Briones  <erbriones@gmail.com>
	
	* ClassDesigner.cs: AddInheritance renamed to
	AddInheritanceLines and made public. 
	
	* ClassDiagram.cs: Added showing base inheritance line
	Added showing derived inheritance lines
	
2010-07-02  Evan Briones  <erbriones@gmail.com>

	* Designer.cs:
	* ClassDesigner.cs: Renamed Designer to ClassDesigner.
	
2010-06-27  Evan Briones  <erbriones@gmail.com>	

	* ShowClassDesignerHandler.cs: Modified to compile against monodevelop trunk.
	
	* ClassDesignerView.cs: Modified to compile against monodevelop trunk.
	Initial toolbox support started.
	
	* ClassDiagramDisplayBinding.cs: Modified to compile against monodevelop trunk.
	
	* MonoDevelop.ClassDesigner.Components:
	* MonoDevelop.ClassDesigner.Gui: Components folder renamed to Gui.

	* MonoDevelop.ClassDesigner.Designer: folder deleted basically repeats namespace.
	
	* ClassDiagram.cs:
	* DiagramEventArgs.cs:
	* AbstractDesigner.cs:	
	* Designer.cs: Moved from MonoDevelop.ClassDesigner.Designer.

2010-06-13  Evan Briones  <erbriones@gmail.com>
	* Commands.cs: Added new Command for opening class designer.
	
	* ShowClassDesignerHandler.cs: 
	* ClassDesignerView.cs: Fixed to use new Designer type.
	
	* MonoDevelop.ClassDesigner.Components: Folder Added
		