@@ -58,6 +58,7 @@
     <Compile Include="MonoDevelop.Diagram.Components\FigureCommandHandlerCollection.cs" />
     <Compile Include="MonoDevelop.Diagram.Commands\ZoomCommands.cs" />
     <Compile Include="MonoDevelop.Diagram.Commands\EditingCommands.cs" />
+    <Compile Include="MonoDevelop.Diagram.Commands\LayoutCommands.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
