@@ -1,5 +1,9 @@
 2010-08-15  Evan Briones  <erbriones@gmail.com>
 
+	* ClassDiagram.cs: 
+
+2010-08-15  Evan Briones  <erbriones@gmail.com>
+
 	* MonoDevelop.ClassDesigner.csproj: 
 
 2010-07-13  Evan Briones  <erbriones@gmail.com>
